force-app/main/default/src/objects/PJN_Coverage_Investigation__c/PJN_Coverage_Investigation__c.object-meta.xml
<CustomObject>
    <description>The Coverage Investigation object is used to store information related to a patient&apos;s therapy coverage options and the outcome of the investigation.</description>
    <label>Coverage Investigation</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Coverage Investigation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coverage Investigations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>