force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/MVN_External_Id__c.field-meta.xml
<CustomField>
    <fullName>MVN_External_Id__c</fullName>
    <description>Unique External Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>