force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Access_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Access_Type__c</fullName>
    <description>The type of Access the patient has following the Coverage Investigation.</description>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_Coverage_Types</valueSetName>
    </valueSet>
</CustomField>