force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan__c</fullName>
    <description>The parent Care Plan where the Coverage Investigation is run from.</description>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Coverage Investigations</relationshipLabel>
    <relationshipName>Coverage_Investigations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>