force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Is_Active_Investigation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Active_Investigation__c</fullName>
    <description>Indicates this record is the active investigation on the parent Care Plan</description>
    <formula>PJN_Care_Plan__r.PJN_Active_Coverage_Investigation__c =  Id</formula>
    <inlineHelpText>Indicates this record is the active investigation on the parent Care Plan</inlineHelpText>
    <label>Is Active Investigation?</label>
    <type>Checkbox</type>
</CustomField>