force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Outcome__c.field-meta.xml
<CustomField>
    <fullName>PJN_Outcome__c</fullName>
    <description>Final coverage outcome resulting from all benefits verification for the patient.</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>