force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Selected_Specialty_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>PJN_Selected_Specialty_Pharmacy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Specialty Pharmacy which was selected to dispense the drug.</description>
    <label>Selected Specialty Pharmacy</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must select Pharmacy type account.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Pharmacy</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Coverage Investigations</relationshipLabel>
    <relationshipName>Coverage_Investigations</relationshipName>
    <type>Lookup</type>
</CustomField>