force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Set_as_Active__c.field-meta.xml
<CustomField>
    <fullName>PJN_Set_as_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controlled by the PJN_ActiveCoverageInvestigationHdlr trigger handler.  When checked, kicks off the logic to set this record as the active on the parent care plan. This value will be reset to false to allow re-triggering of the logic.</description>
    <inlineHelpText>Triggers an update to the Care Plan to set this Coverage Investigation as the Active Investigation</inlineHelpText>
    <label>Set as Active on Care Plan</label>
    <type>Checkbox</type>
</CustomField>