force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Special_Pharmacy_Round_Robin_Audit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Special_Pharmacy_Round_Robin_Audit__c</fullName>
    <description>Stamped with information used to determine round robin assignment at the time the assignment was made.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Pharmacy Round Robin Audit</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>