force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Speciality_Pharmacy_Selection_Reason__c.field-meta.xml
<CustomField>
    <fullName>PJN_Speciality_Pharmacy_Selection_Reason__c</fullName>
    <description>The logic by which the Specialty Pharmacy was selected.</description>
    <label>Speciality Pharmacy Selection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Patient Preferred</fullName>
            </value>
            <value>
                <fullName>Payer Mandated</fullName>
            </value>
            <value>
                <fullName>Prescriber Preferred</fullName>
            </value>
            <value>
                <fullName>Round-Robin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>