force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Status__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status__c</fullName>
    <description>The status of the Coverage Investigation.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>