force-app/main/default/src/objects/PJN_Coverage_Investigation__c/fields/PJN_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type__c</fullName>
    <defaultValue>&apos;Standard&apos;</defaultValue>
    <description>Indicates the type of investigation being performed</description>
    <label>Investigation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PJN_Initial_Investigation</fullName>
                <default>true</default>
                <label>Initial Investigation</label>
            </value>
            <value>
                <fullName>PJN_Re-Authorization</fullName>
                <label>Re-Authorization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>