force-app/main/default/src/objects/PJN_Coverage_Investigation__c/validationRules/Access_Type_Required_if_Outcome_Covered.validationRule-meta.xml
<ValidationRule>
    <fullName>Access_Type_Required_if_Outcome_Covered</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( PJN_Outcome__c , &apos;Covered&apos;) &amp;&amp;
 ISPICKVAL( PJN_Access_Type__c ,&apos;&apos;) &amp;&amp;
$Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>PJN_Access_Type__c</errorDisplayField>
    <errorMessage>Access Type must be filled out when the Outcome is set to Covered.  Please populate appropriate Access Type and save</errorMessage>
</ValidationRule>